--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,9 +2,9 @@ site_name: lavalink hosting
 site_author: DarrenOfficial
 site_url: https://lavalink.darrennathanael.com
 site_description: List of free lavalink servers! If you have lavalink that you can share feel free to make a pull request! A standalone audio sending node based on Lavaplayer and JDA-Audio. Allows for sending audio without it ever reaching any of your shards.
-repo_name: 'lavalink list'
-repo_url: 'https://github.com/DarrenOfficial/lavalink-list'
-edit_uri: 'https://github.com/DarrenOfficial/lavalink-list/edit/main/docs'
+repo_name: 'Lavalink List'
+repo_url: 'https://github.com/NotSaksh/Lavalinks.xyz/'
+edit_uri: 'https://github.com/NotSaksh/Lavalinks.xyz/edit/main/docs'
 
 
 theme: 
@@ -53,10 +53,10 @@ nav:
 extra:
   social:
     - icon: 'fontawesome/brands/twitter'
-      link: 'https://twitter.com/darrenuselinux'
+      link: 'https://twitter.com/notsaksh'
     - icon: 'fontawesome/brands/github-alt'
-      link: 'https://github.com/darrenofficial' 
+      link: 'https://github.com/NotSaksh' 
     - icon: 'fontawesome/brands/discord'
-      link: 'https://discord.darrennathanael.com'
+      link: 'https://discord.gg/notsaksh'
   generator: false
-copyright: 'Copyright &copy; 2020 - 2022 Darren Nathanael'
+copyright: 'Copyright &copy; 2020 - 2022 Nexus Development'
